--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -345,6 +345,12 @@
 
 %p I verified that I could ssh into the GCP instance I had created earlier.
 
+%p I saw this:
+
+%img(src='/lesson001/ss17.png')
+
+
+
 %p After the instance served me a shell prompt, I issued a shell command:
 
 .syntax
@@ -451,6 +457,11 @@
 
 %p The page reminds me of the page served to me by AWS when I work with S3.
 
+%p I saw this:
+
+%img(src='/lesson001/ss18.png')
+
+
 
 %p In the codelabs-tab, I returned to the cpb100 page:
 
@@ -480,7 +491,10 @@
   %li earthquakes.csv
   %li earthquakes.htm
   %li earthquakes.png
-  
+
+%p I saw this:
+
+%img(src='/lesson001/ss19.png')
 
 %p In the codelabs-tab, I returned to the cpb100 page:
 
@@ -512,7 +526,7 @@
     %a(href='https://storage.cloud.google.com/cs101feb2018/earthquakes.png' target='x')
       https://storage.cloud.google.com/cs101feb2018/earthquakes.png
 
-%p On my laptop I verified that the public could see earthquakes.png
+%p Using a laptop-shell, I verified that the public could see earthquakes.png
 
 .syntax
   %pre
@@ -541,6 +555,11 @@
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/#7
 
 %p I followed the instructions in that page to delete my GCP instance.
+
+%p I saw this:
+
+%img(src='/lesson001/ss20.png')
+
 
 %p In the codelabs-tab, I returned to the URL listed below:
 %p
@@ -589,6 +608,10 @@
 
 %p I hovered it to see: "Activate Google Cloud Shell".
 
+%p I saw this:
+
+%img(src='/lesson001/ss21.png')
+
 %p I clicked it.
 
 %p A dark window appeared at the bottom.
@@ -604,6 +627,21 @@
 %p I popped that shell window so it had its own tab.
 
 %p I moved that tab so it was tab #5, the tab after GCP-tab.
+
+%p After that, GCP issued an error.
+
+%p I sense that it some kind of GCP-bug:
+
+%img(src='/lesson001/ss23.png')
+
+%p It is unfortunate that GCP lacks reliability.
+
+%p The error suggested that I send feedback.
+
+%p So I did that and halted my activity in this lab for a day.
+
+
+%p Later I continued.
 
 %p In the codelabs-tab, I returned my attention to this page:
 %p
