--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -640,8 +640,13 @@
 
 %p So I did that and halted my activity in this lab for a day.
 
+%p After 24 hours, I continued.
 
-%p Later I continued.
+%p In GCP-tab I started a new Cloud-Shell.
+
+%p I move the shell to its own tab (tab #5).
+
+%p Cloud-Shell stopped issuing errors.
 
 %p In the codelabs-tab, I returned my attention to this page:
 %p
@@ -664,7 +669,7 @@
 
 .syntax
   %pre
-    %code.bash less cloudsql/table_creation.sql
+    %code.bash cat cloudsql/table_creation.sql
 
 %p I saw some SQL syntax:
 
@@ -720,12 +725,6 @@
 %p I see in the above output that we have accommodations and ratings but no recommendations yet.
 
 %p I returned to the codelabs-tab.
-
-%p I studied it and decided that those actions completed my interaction with the page below:
-
-%p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/#2' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/#2
 
 %p I navigated to the next page in the sequence:
 
