--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -780,19 +780,33 @@
   %li MySQL databases
   %li PostgreSQL databases
 
+
+%p I saw this:
+
+%img(src='/lesson001/ss24.png')
+
+
 %p I clicked the blue: "Create instance" button.
 
 %p In the next page I picked the MySQL radio-button.
 
 %p I clicked the blue: "Next" button.
 
-%p In the next page I clicked the blue: "Choose Second Generation" button.
+%p I saw this:
+
+%img(src='/lesson001/ss25.png')
+
+%p I clicked the blue: "Choose Second Generation" button.
 
 %p The next page landed me in a field: "Instance ID".
 
 %p I entered string: "rentals".
 
 %p I entered root password: "root".
+
+%p I saw this:
+
+%img(src='/lesson001/ss26.png')
 
 %p I clicked the blue "Create" button.
 
@@ -802,6 +816,12 @@
   %li MySQL 2nd Gen 5.7	35.226.122.211	cpb100-195004:us-central1:rentals
   %li IP: 35.226.122.211
   %li Instance connection name: cpb100-195004:us-central1:rentals
+
+%p I saw this:
+
+%img(src='/lesson001/ss27.png')
+
+
 
 %p Next I clicked the Cloud-Shell-tab.
 
