--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -813,8 +813,8 @@
 %p GCP served me a page with information about my new db instance:
 
 %ul
-  %li MySQL 2nd Gen 5.7	35.226.122.211	cpb100-195004:us-central1:rentals
-  %li IP: 35.226.122.211
+  %li MySQL 2nd Gen 5.7
+  %li IP: 104.197.219.252
   %li Instance connection name: cpb100-195004:us-central1:rentals
 
 %p I saw this:
