--- a/app/views/lessons/_lesson001f.erb
+++ b/app/views/lessons/_lesson001f.erb
@@ -7,8 +7,9 @@ cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
 
 
 cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ bash find_my_ip.sh
-35.197.111.115
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ bash find_my_ip.sh
+35.227.172.20
+bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
 </code>
