--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -837,12 +837,6 @@
   %pre
     =render 'lesson001f'
 
-%p I waited two hours.
-
-%p GCP terminated my Cloud Shell session.
-
-%p I started a new Cloud Shell session.
-
 %p I ran shell commands:
 
 .syntax
@@ -850,7 +844,7 @@
     %code.bash
       cd ~/training-data-analyst/CPB100/lab3a
       bash authorize_cloudshell.sh
-      bash find_my_ip.sh
+
 
 %p I saw this:
 
@@ -872,7 +866,11 @@
 
 %p Then look for a link for the MySQL instance.
 
-%p Explore pages under that link to find the page for granting permissions.
+%p Under that link find the authorization form.
+
+%p I saw this:
+
+%img(src='/lesson001/ss28.png')
 
 %p Enough about that; back to the lesson.
   
@@ -899,6 +897,11 @@
 
 %p GCP served a page: "Import data from Cloud Storage"
 
+%p I saw this:
+
+%img(src='/lesson001/ss29.png')
+
+
 %p I clicked the button named: "Browse".
 
 %p GCP served a link named: "cs101feb2018" which is the name of the bucket I created earlier.
@@ -909,11 +912,25 @@
 
 %p I clicked "table_creation.sql" in that folder.
 
+%p I saw this:
+
+%img(src='/lesson001/ss30.png')
+
 %p GCP activated a blue button named "Import".
+
+%p I saw this:
+
+%img(src='/lesson001/ss31.png')
 
 %p I clicked the button.
 
 %p GCP got busy for 10 seconds and then indicated success with a green-check-mark.
+
+%p I saw this:
+
+%img(src='/lesson001/ss32.png')
+
+
 
 %p In the codelabs-tab, I navigated to the next page in the sequence:
 
