--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -930,8 +930,6 @@
 
 %img(src='/lesson001/ss32.png')
 
-
-
 %p In the codelabs-tab, I navigated to the next page in the sequence:
 
 %p
@@ -964,6 +962,11 @@
 
 %p GCP responded by activating the blue "Import" button.
 
+%p I saw this:
+
+%img(src='/lesson001/ss33.png')
+
+
 %p I clicked the button.
 
 %p GCP quickly served me a page named "Instance details".
@@ -980,7 +983,7 @@
 
 %p I selected database: "recommendation_spark".
 
-%p In the next field, I entered string: "Rating".
+%p In the "Table" field, I entered string: "Rating".
 
 %p GCP responded by activating the blue "Import" button.
 
