--- a/app/views/lessons/_lesson001h.erb
+++ b/app/views/lessons/_lesson001h.erb
@@ -1,16 +1,8 @@
 <code class='bash'>
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ mysql --host=35.226.122.211 --user=root --password
+cs101@cpb100-195004:~$ mysql --host=104.197.219.252 --user=root --password
 Enter password:
-Welcome to the MariaDB monitor.  Commands end with ; or \g.
-Your MySQL connection id is 1426
-Server version: 5.7.14-google-log (Google)
-
-Copyright (c) 2000, 2017, Oracle, MariaDB Corporation Ab and others.
-
-Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-MySQL [(none)]>
-MySQL [(none)]>
-MySQL [(none)]>
+ERROR 2003 (HY000): Can't connect to MySQL server on '104.197.219.252' (110 "Connection timed out")
+cs101@cpb100-195004:~$
+cs101@cpb100-195004:~$
+cs101@cpb100-195004:~$
 </code>
