--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1141,8 +1141,11 @@
 
 %img(src='/lesson001/ss36.png')
 
-%p I waited for it to finish.
+%p Eventually, it finished.
 
+%p I saw this:
+
+%img(src='/lesson001/ss37.png')
 
 
 
