--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1396,13 +1396,20 @@
 
 %p I clicked the web preview square-button at top-right.
 
+%p The button looks like this:
+
+%img(src='/lesson001/ss42.png')
+
+%p I opted to change the port:
+
+%img(src='/lesson001/ss43.png')
+
 %p I changed the port to 8081 and clicked through.
 
 %p GCP loaded a page from this URL:
 
 %p
-  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
-    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+  https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#
 
 %p I made sure that page was in tab 6, the tab after the Cloud-Shell-tab.
 
@@ -1410,7 +1417,7 @@
 
 %p I captured an image of the page:
 
-%img(src='/lesson001/lesson001t.png')
+%img(src='/lesson001/ss44.png')
 
 %p In the GCP-tab,  I visited this URL:
 %p
@@ -1419,6 +1426,9 @@
   
 %p The page told me that GCP had just started an VM instance named "mydatalabvm".
 
+%p I saw this:
+
+%img(src='/lesson001/ss45.png')
 
 %p In codelabs-tab, I clicked the next link in the series:
 
@@ -1434,8 +1444,7 @@
   %li In GCP-tab, I stopped VM instance named "mydatalabvm"
   %li In DataLab-tab, I verified that I could not access:
   %li
-    %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
-      https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
   %li In Cloud-Shell tab I ran a command:
   %li
     .syntax
@@ -1445,13 +1454,10 @@
   %li I wait a minute for the VM to boot.
   %li In DataLab-tab, I verified that I could access:
   %li
-    %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
-      https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
   %li It worked!
 
-
 %p That ended my interaction with the CPB100-node I call: "Datalab".
-
 
 %a(href='#top') [top]
 %hr/
@@ -1488,8 +1494,7 @@
 %p In DataLab-tab, I verified this URL was active:
 
 %p
-  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
-    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+  https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
 
 %p In codelabs-tab, I clicked the next node in the sequence:
 
@@ -1502,12 +1507,13 @@
 %p In DataLab-tab, I visited this URL:
 
 %p
-  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
-    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+  https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
 
 %p I clicked the +notebook button.
 
-%p The server responded with a page which reminds me of a Jupyter Notebook UI.
+%p The server responded with a page which reminds me of a Jupyter Notebook UI:
+
+%img(src='/lesson001/ss46.png')
 
 %p In Github-tab, I visited this URL:
 
@@ -1515,7 +1521,11 @@
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
 
-%p I copied some Python syntax from demandforecast.ipynb into the field in the new notebook UI.
+%img(src='/lesson001/ss47.png')
+
+%p I copied some Python syntax from demandforecast.ipynb into the field in the new notebook UI:
+
+%img(src='/lesson001/ss48.png')
 
 %p So, I was bouncing between the Github-tab and DataLab-tab.
 
@@ -1589,8 +1599,7 @@
 %p GCP loaded this URL into my browser:
 
 %p
-  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks' target='x')
-    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks
+  https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks
 
 %p I move that page so it occupied DataLab-tab [ tab 6 ].
 
@@ -1604,7 +1613,6 @@
 
 %p A GCP-datalab notebook offers behavior similar to a Jupyter notebook.
 
-
 %p In Github-tab, I visited the URL listed below which offers syntax for a Jupyter notebook:
 %p
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
@@ -1612,7 +1620,9 @@
   
 %p I scrolled to this h2-element [about 2/3 to page-end]:
 
-%p "Machine Learning with Tensorflow"
+%p "Machine Learning with Tensorflow":
+
+%img(src='/lesson001/ss49.png')
 
 %p I studied four paragraphs below the h2-element.
 
