--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -58,3 +58,77 @@
 %p
   %a(href='https://codelabs.developers.google.com/cp100' target='x')
     https://codelabs.developers.google.com/cp100
+%p I saw this:
+
+%img(src='/lesson002/l201.png')
+  
+%p On that page I assume the correct ordering of links is listed below:
+
+%ul
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-free-trial' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-free-trial
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-app-engine
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-cloud-storage
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-compute-engine
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-container-engine
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query' target='x')
+      https://codelabs.developers.google.com/codelabs/cp100-big-query
+  
+%p The above links are discussed below:
+%ul
+  %li
+    %a(href='#free-trial') free-trial
+
+%hr/
+
+%h2#free-trial Free-Trial
+
+%p#free-trial Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-free-trial' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-free-trial
+  
+%p I saw a simple path through 4 pages.
+
+%p The third page had a noteworthy URL I used to get $300 of cloud-credit from Google:
+
+%p I loaded the URL into tab 3, the GCP-tab:
+%p
+  %a(href='https://console.developers.google.com/freetrial' target='x')
+    https://console.developers.google.com/freetrial
+
+%p
+  I logged in using my gmail account.
+
+%p
+  It worked well; I gave it my credit-card info.
+%p
+  It gave me $300 of cloud-credit from Google.
+%img(src='/lesson001/ss10.png')
+
+%p
+  I hope that you can also get that credit.
+
+%p Next, I visited the URL listed below:
+
+%p
+  %a(href='https://console.cloud.google.com/projectcreate' target='x')
+    https://console.cloud.google.com/projectcreate
+
+%img(src='/lesson001/img003.png')
+
+%p I used that page to create a project called cp100.
