--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -91,6 +91,9 @@
 %ul
   %li
     %a(href='#free-trial') free-trial
+  %li
+    %a(href='#cloud-launcher') cloud-launcher
+
 
 %hr/
 
@@ -132,3 +135,113 @@
 %img(src='/lesson001/img003.png')
 
 %p I used that page to create a project called cp100.
+
+%p After I created cp100, GCP displayed a "CP100" select-option-link at the top of every GCP page in my GCP-tab:
+
+%img(src='/lesson002/l202.png')
+
+%p That ended my interaction with the CP100-node I call: "Free-Trial".
+
+%a(href='#top') [top]
+
+%hr/
+
+%h2#cloud-launcher Cloud-Launcher
+Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher
+%p I studied this page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#1
+%p I studied this page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#2
+
+%p In the GCP-tab of my browser, I confirmed that I had project CP100 loaded.
+
+%p I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/' target='x')
+    https://console.cloud.google.com/
+
+%p I saw this:
+
+%img(src='/lesson002/l203.png')
+
+
+%p I clicked the "upper-left-hamburger-link":
+
+%img(src='/lesson002/l204.png')
+%br/
+
+%p I clicked "APIs & Services":
+
+%img(src='/lesson002/l205.png')
+
+%p I saw this:
+
+%img(src='/lesson002/l206.png')
+
+%p Near the top I clicked blue-button: "ENABLE APIS AND SERVICES":
+
+%img(src='/lesson002/l207.png')
+%br/
+
+%p I searched for "Compute Enginge".
+
+%p I found it:
+
+%img(src='/lesson002/l208.png')
+
+%p I clicked the blue-button: "ENABLE".
+
+%p After two minutes, GCP signaled success.
+
+%p I returned to the codelabs-tab.
+
+%p I studied the next link in the sequence:
+
+%p
+
+%a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3' target='x')
+  https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3
+
+%p I returned to the GCP-tab.
+
+%p I clicked the "upper-left-hamburger-link".
+
+%p I clicked "Cloud-Launcher":
+
+%img(src='/lesson002/l209.png')
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+%a(href='#top') [top]
+%hr/
+
+  
