--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -219,7 +219,11 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l209.png')
 
+%p I found LAMP by Bitnami:
 
+%img(src='/lesson002/l210.png')
+
+%p I clicked blue-button: "LAUNCH ON COMPUTE ENGINE".
 
 
 
