--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -225,6 +225,21 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p I clicked blue-button: "LAUNCH ON COMPUTE ENGINE".
 
+%p After a short delay, GCP served me a configuration page:
+
+%img(src='/lesson002/l211.png')
+
+%p I assumed that the default configuration was fine for my training.
+
+%p I clicked the blue-button: "Deploy".
+
+%p GCP served status during deployment:
+
+%img(src='/lesson002/l212.png')
+%hr/
+%img(src='/lesson002/l213.png')
+
+
 
 
 
