--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -207,9 +207,8 @@ Next, in the codelabs-tab, I clicked this link:
 %p I studied the next link in the sequence:
 
 %p
-
-%a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3' target='x')
-  https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#3
 
 %p I returned to the GCP-tab.
 
@@ -238,6 +237,12 @@ Next, in the codelabs-tab, I clicked this link:
 %img(src='/lesson002/l212.png')
 %hr/
 %img(src='/lesson002/l213.png')
+
+%p In the codelabs-tab, I studied the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#4
 
 
 
