--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -244,10 +244,15 @@ Next, in the codelabs-tab, I clicked this link:
   %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#4' target='x')
     https://codelabs.developers.google.com/codelabs/cp100-cloud-launcher/#4
 
+%p In the GCP-tab I clicked the link site address near the top.
+
+%img(src='/lesson002/l214.png')
+%br/
 
 
+%p A LAMP server responded:
 
-
+%img(src='/lesson002/l215.png')
 
 
 
