--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -254,6 +254,12 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l215.png')
 
+%p I closed that tab.
+
+%p In the GCP-tab I clicked the SSH link:
+
+%img(src='/lesson002/l216.png')
+%br/
 
 
 
