--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -261,6 +261,10 @@ Next, in the codelabs-tab, I clicked this link:
 %img(src='/lesson002/l216.png')
 %br/
 
+%p After 30 seconds, GCP served me an SSH window:
+
+%img(src='/lesson002/l217.png')
+
 
 
 
