--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -265,6 +265,15 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l217.png')
 
+%p In that window I issued shell commands:
+
+.syntax
+  %pre
+    %code
+      cd /opt/bitnami
+      sudo cp docs/phpinfo.php apache2/htdocs
+      exit
+      
 
 
 
