--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -274,6 +274,16 @@ Next, in the codelabs-tab, I clicked this link:
       sudo cp docs/phpinfo.php apache2/htdocs
       exit
       
+%p In the GCP-tab I clicked the link site address near the top.
+%p The LAMP server appeared in a new tab with this URL: http://146.148.39.70/
+%p I enhanced the URL:
+%p http://146.148.39.70/phpinfo.php
+
+%p The server responded with configuration information:
+
+
+%img(src='/lesson002/l218.png')
+
 
 
 
