--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -281,8 +281,14 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p The server responded with configuration information:
 
-
 %img(src='/lesson002/l218.png')
+
+%p The above page convinced me that I successfully completed this exercise.
+
+%p In the GCP-tab I clicked the blue-trashcan-button near the top:
+
+%img(src='/lesson002/l219.png')
+
 
 
 
