--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -285,12 +285,17 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p The above page convinced me that I successfully completed this exercise.
 
-%p In the GCP-tab I clicked the blue-trashcan-button near the top:
+%p In the GCP-tab I clicked the blue-trashcan-button "DELETE" near the top:
 
 %img(src='/lesson002/l219.png')
 
+%p GCP deleted that server for me.
 
+%p That ended my interaction with the CP100-node I call: "Cloud-Launcer".
 
+%a(href='#top') [top]
+
+%hr/
 
 
 
