--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -93,7 +93,8 @@
     %a(href='#free-trial') free-trial
   %li
     %a(href='#cloud-launcher') cloud-launcher
-
+  %li
+    %a(href='#app-engine') app-engine
 
 %hr/
 
@@ -291,11 +292,66 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p GCP deleted that server for me.
 
-%p That ended my interaction with the CP100-node I call: "Cloud-Launcer".
+%p That ended my interaction with the CP100-node I call: "Cloud-Launcher".
 
 %a(href='#top') [top]
 
 %hr/
+
+
+%h2#app-engine App-Engine
+
+%p#app-engine Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine
+  
+%p I saw this:
+
+%img(src='/lesson002/l220.png')
+
+%p I studied that page.
+
+%p I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#1
+
+%p I studied the page.
+
+%p I bookmarked useful links in that page:
+
+%ul
+  %li
+    %a(href='https://cloud.google.com/docs' target='x')
+      https://cloud.google.com/docs
+      
+  %li
+    %a(href='https://cloud.google.com/appengine/docs' target='x')
+      https://cloud.google.com/appengine/docs
+      
+  %li
+    %a(href='https://cloud.google.com/datastore' target='x')
+      https://cloud.google.com/datastore
+      
+  %li
+    %a(href='https://cloud.google.com/appengine/docs/python/tools/webapp2' target='x')
+      https://cloud.google.com/appengine/docs/python/tools/webapp2
+      
+  %li
+    %a(href='https://cloud.google.com/sql/docs/introduction' target='x')
+      https://cloud.google.com/sql/docs/introduction
+      
+  %li
+    %a(href='https://cloud.google.com/source-repositories/docs' target='x')
+      https://cloud.google.com/source-repositories/docs
+      
+  %li
+    %a(href='https://cloud.google.com/shell/docs' target='x')
+      https://cloud.google.com/shell/docs
+  
 
 
 
