--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -327,31 +327,79 @@ Next, in the codelabs-tab, I clicked this link:
   %li
     %a(href='https://cloud.google.com/docs' target='x')
       https://cloud.google.com/docs
-      
   %li
     %a(href='https://cloud.google.com/appengine/docs' target='x')
       https://cloud.google.com/appengine/docs
-      
   %li
     %a(href='https://cloud.google.com/datastore' target='x')
       https://cloud.google.com/datastore
-      
   %li
     %a(href='https://cloud.google.com/appengine/docs/python/tools/webapp2' target='x')
       https://cloud.google.com/appengine/docs/python/tools/webapp2
-      
   %li
     %a(href='https://cloud.google.com/sql/docs/introduction' target='x')
       https://cloud.google.com/sql/docs/introduction
-      
   %li
     %a(href='https://cloud.google.com/source-repositories/docs' target='x')
       https://cloud.google.com/source-repositories/docs
-      
   %li
     %a(href='https://cloud.google.com/shell/docs' target='x')
       https://cloud.google.com/shell/docs
   
+%p I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#2
+
+%p I studied the page.
+
+%p In the GCP-tab of my browser, I loaded a URL:
+
+%p
+  %a(href='https://console.cloud.google.com/' target='x')
+    https://console.cloud.google.com/
+
+%p I clicked the upper-left-hamburger-link.
+
+%p From there I picked "Source Repositories":
+
+%img(src='/lesson002/l221.png')
+%br/
+
+%p GCP served me a page.
+
+%p I clicked blue-button "CREATE REPOSITORY":
+
+%img(src='/lesson002/l222.png')
+%br/
+
+%p GCP asked me to name my new repository.
+
+%p I called it: "default":
+
+%img(src='/lesson002/l223.png')
+%br/
+
+%p GCP served me a page:
+
+%img(src='/lesson002/l224.png')
+%br/
+
+%p At the upper-right of that page I clicked a small icon to activate: "Cloud-Shell":
+
+%img(src='/lesson002/l225.png')
+%br/
+
+%p I moved the Cloud-Shell window into its own tab (tab 5).
+
+%p I changed the text to be black on white:
+
+%img(src='/lesson002/l226.png')
+%br/
+
+
+
 
 
 
